@@ -30,6 +30,8 @@ Version 2.3.0
   + Tools that have a --restrict option may now receive a nodeset or
     some custom flags for restricting the topology.
   + Fix lstopo drawing when autoresizing on Windows 10.
+  + Pressing the F5 key in lstopo X11 and Windows graphical/interactive outputs
+    now refreshes the display according to the current topology and binding.
   + Add a tikz lstopo graphical backend to generate picture easily included into
     LaTeX documents.
 
